fix nav bar spacing

--- a/css/site.css
+++ b/css/site.css
@@ -4,7 +4,7 @@
 }
 
 main {
-    margin-top: 69px;
+    margin-top: 60px;
 }
 
 blockquote {
@@ -38,6 +38,7 @@ blockquote:before {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
     font-weight: bold;
+    line-height: 1.0;
 }
 
 h1, .h1 {
